[gd_scene load_steps=3 format=2]

[ext_resource path="res://Pause Screen.gd" type="Script" id=1]
[ext_resource path="res://pause panel.tscn" type="PackedScene" id=2]

[node name="Pause Screen" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="pause_panel" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="pause_panel/CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="pause_panel/CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="pause_panel/CenterContainer/Panel/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]

[editable path="pause_panel"]
